minor work with style

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
 
 <ion-content>
   @if (isLoading) {
-    <ion-list>
+    <ion-list class="ion-padding-top">
       @for (i of dummyArray; track i) {
         <ion-item lines="none" class="ion-padding-bottom">
           <ion-avatar slot="start">
